// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LanguageSelect unit tests should render correctly - en 1`] = `
.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  font-size: 12px;
  margin: 0 5px;
}

.c1 {
  background: none;
  border: none;
  outline: none;
  color: black;
  padding: 5px;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c1:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

<div>
  <div
    class="c0"
  >
    <button
      class="c1"
      data-testid="select-fr"
      href="/"
      id="select-fr"
    >
      FR
    </button>
  </div>
</div>
`;

exports[`LanguageSelect unit tests should render correctly 1`] = `
.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  font-size: 12px;
  margin: 0 5px;
}

.c1 {
  background: none;
  border: none;
  outline: none;
  color: black;
  padding: 5px;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c1:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

<div>
  <div
    class="c0"
  >
    <button
      class="c1"
      data-testid="select-en"
      href="/"
      id="select-en"
    >
      EN
    </button>
  </div>
</div>
`;
